--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 <source src="video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            div class="video-mp4">
+            <video controls>
+                <source src="video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
             
      </div>
      </body>
